# brows

./: CLAUDE.md  Cargo.toml  LICENSE  README.ja.md  README.md  build.rs
.github/workflows/: release.yml
src/: browser.rs  config.rs  icon.rs  ipc.rs  lang.rs  main.rs  registry.rs  ui.rs  updater.rs  util.rs
src/ui/: mod.rs  picker.rs  settings.rs  tray.rs  win32.rs
